update: 카드 상세 기능 구현에 따른 Card 관련 로직 수정
ADD
   - hasPermissionForCard 메서드를 통한 상세 기능 권한 부여 처리
   - 사용하지 않는 import 문 삭제
   - User 관계 설정 및 필드 추가